mobile resposive done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="cabin-title">
    <header>
     <nav class="container">
-        <div class="nav-first">
+        <div class="nav-first vector-cotainer">
          <h2 class="logo jomhuria-regular"><a href="http://127.0.0.1:5500/index.html">Logo</a> </h2>
          <div class="nav-center">
              <p><a href="http://127.0.0.1:5500/aboutUs.html">About Us</a></p>
@@ -52,13 +52,14 @@
          </div>
         </div>
      </nav>
-     <div class="nav-title">
-        <p>Join My Restaurant Rewards, win Our Special <span>Guest Token!</span></p>
+     <div class="nav-title ">
+        <p class="vector-cotainer">Join My Restaurant Rewards, win Our Special <span>Guest Token!</span></p>
      </div>
     </header>
    <!-- hero section -->
-    <section class="hero">
-    <h1 class="playfair-display">
+    <section class="hero-section">
+    <div class="hero vector-cotainer">
+      <h1 class="playfair-display">
         Healthy And Fresh Food <span> In One Place <img class="hero-pizza" src="./public/pizza.png" alt=""></span>
     </h1>
     <div class="hero-div">
@@ -90,10 +91,11 @@
             </div>
         </div>
     </div>
+    </div>
    </section>
    <!-- best food -->
-    <section class="best-food">
-        <div class="best-food-section">
+    <section class="best-food vector-cotainer">
+        <div class="best-food-section vector-cotainer">
             <div>
                 <p class="hero-div-title show-class satisfy-regular" >A Indian Cuisine Restaurant</p>
                 <h2 class="best-food-title">We are the best  in this food town for a decade!</h2>
@@ -117,7 +119,7 @@
         </div>
         <button class="about-us">About Us</button>
     </section>
-    <section class="daily-offer">
+    <section class="daily-offer vector-cotainer">
         <div class="daily-offer-title">
             <p>Our Daily Offer</p>
             <div>
@@ -200,8 +202,8 @@
     </section>
     <!-- Reservation -->
     <section class="online-reservation">
-        <h1 class="reservation-title">Online Reservation</h1>
-        <div>
+        <h1 class="reservation-title vector-cotainer">Online Reservation</h1>
+        <div class="vector-cotainer">
             <div class="reservation-input-container">
                 <div class="input-div"><input type="text" placeholder="Your name"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none">
                     <mask id="mask0_1332_835" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="12" width="16" height="8">
@@ -265,7 +267,7 @@
         </div>
     </section>
     <!-- contact info -->
-    <section class="contact-container">
+    <section class="contact-container vector-cotainer">
         
             <div class="contact-info">
                 <div class="contact-info-section">
@@ -324,8 +326,9 @@
         
     </section>
     <!-- Newsletter section -->
-     <section class="newsletter">
+     <section class="newsletter vector-cotainer">
         <div class="newsletter-top">
+              <p class="newsletter-title-responsive">Newsletter</p>
             <p class="hero-div-title satisfy-regular newsletter-first-div" >A Indian Cuisine Restaurant</p>
             <h1 class="newsletter-title">Subscribe Newsletter & get Latest Offer!</h1>
             <p class="newsletter-description">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document.</p>
@@ -473,7 +476,7 @@
                </div>
             </div>
         </div>
-        <div class="disclaimer-footer">
+        <div class="disclaimer-footer vector-cotainer">
             <p class="disclaimer">© 2077 Untitled UI. All rights reserved.</p>
             <div class="disclaimer-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
