--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
    <header>
     <nav class="container">
         <div class="nav-first vector-cotainer">
-         <h2 class="logo jomhuria-regular"><a href="http://127.0.0.1:5500/index.html">Logo</a> </h2>
+         <h2 class="logo jomhuria-regular"><a href="/index.html">Logo</a> </h2>
          <div class="nav-center">
-             <p><a href="http://127.0.0.1:5500/aboutUs.html">About Us</a></p>
-             <p><a href="http://127.0.0.1:5500/menu.html">Menu</a></p>
+             <p><a href="/aboutUs.html">About Us</a></p>
+             <p><a href="/menu.html">Menu</a></p>
              <p><a href="" >Blog</a></p>
-             <p><a href="http://127.0.0.1:5500/contactUs.html">Contact</a></p>
+             <p><a href="/contactUs.html">Contact</a></p>
          </div>
          <div class="nav-right">
              <button class="nav-button"> 
