--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
     <!-- Jomhuria/cabi/playfare/satisfy -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +24,7 @@
   <body class="cabin-title">
     <header>
       <nav class="nav-container flex">
-        <div class="nav-first flex vector-cotainer">
+        <div class="nav-first items-center flex vector-cotainer">
           <h2 class="logo jomhuria-regular"><a href="/index.html">Logo</a></h2>
           <ul class="nav-center text-lg flex">
             <li><a href="/aboutUs.html">About Us</a></li>
@@ -36,7 +36,7 @@
             <button class="nav-button">
               <img src="./assets/icons/bar-icon.svg" alt="menu">
             </button>
-            <button class="responsive-nav-button">
+            <button class="responsive-nav-button items-center flex-column justify-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="11"
@@ -89,7 +89,7 @@
         </div>
       </nav>
       <div class="nav-title primary-bg text-center">
-        <p class="vector-cotainer">
+        <p class="vector-cotainer nav-text">
           Join My Restaurant Rewards, win Our Special
           <span class="nav-title-span">Guest Token!</span>
         </p>
@@ -103,12 +103,12 @@
           <h1 class="playfair-display hero-title font-bold">
             Healthy And Fresh Food <span class="block-span"> In One Place</span>
           </h1>
-          <img class="hero-pizza absolute" src="./public/pizza.png" alt="pizza" />
+          <img class="hero-pizza absolute" src="./assets/images/pizza.png" alt="pizza" />
         </div>
         <div class="hero-div flex">
           <!-- hero left -->
           <div class="image-container">
-            <img class="hero-div-img" src="./public/image 19.png" alt="Restaurant" />
+            <img class="hero-div-img" src="./assets/images/image 19.png" alt="Restaurant" />
           </div>
           <!--  hero-right-->
           <div class="hero-inner-div">
@@ -130,12 +130,12 @@
                   Reviews <span class="block-span"> of Customer</span>
                 </p>
               </div>
-              <div class="hero-last-div-two">
-                <img src="./public/Ellipse 11.png" alt="Person" />
-                <p>demonstrate the visual <span> form of a document.</span></p>
+              <div class="hero-last-div-two flex items-center">
+                <img src="./assets/images/Ellipse 11.png" alt="Person" class="responsive-width" />
+                <p class="hero-last-div-two-text">demonstrate the visual <span> form of a document.</span></p>
               </div>
             </div>
-            <div class="">
+            <div class="hero-pizza">
              <img src="./assets/icons/mouse-icon.svg" alt="mouse">
             </div>
           </div>
@@ -154,7 +154,7 @@
             We are the best in this food town for a decade!
           </h2>
 
-          <img class="best-food-img" src="./public/image 38.png" alt="chicken" />
+          <img class="best-food-img" src="./assets/images/image 38.png" alt="chicken" />
 
           <p class="best-food-secondary-title font-bold playfair-display">Spicy Club</p>
           <p class="best-food-description text-lg">
@@ -164,7 +164,7 @@
         </div>
         <!-- best food right section -->
         <div>
-          <img class="best-food-img" src="./public/image 39.png" alt="curry" />
+          <img class="best-food-img" src="./assets/images/image 39.png" alt="curry" />
           <p class="best-food-secondary-title font-bold playfair-display">Spicy Club</p>
           <p class="best-food-description">
             In publishing and graphic design, Lorem ipsum is a placeholder text
@@ -205,7 +205,7 @@
         <!-- right side menu -->
         <div class="menu flex flex-column justify-between">
           <div class="menu-section flex">
-            <div><img src="./public/image 21.png" alt="chicken" class="menu-section-img" /></div>
+            <div><img src="./assets/images/image 21.png" alt="chicken" class="menu-section-img" /></div>
             <div class="menu-price flex flex-column">
               <div class="menu-left flex justify-between">
                 <p class="menu-title playfair-display font-bold">Spicy Club</p>
@@ -219,7 +219,7 @@
           </div>
           <div class="menu-section flex">
             <div>
-              <img src="./public/image 22.png" alt="pizza" class="menu-section-img" />
+              <img src="./assets/images/image 22.png" alt="pizza" class="menu-section-img" />
             </div>
             <div class="menu-price flex flex-column">
               <div class="menu-left flex justify-between">
@@ -234,7 +234,7 @@
           </div>
           <div class="menu-section flex">
             <div>
-              <img src="./public/image 23.png" alt="pizza" class="menu-section-img"/>
+              <img src="./assets/images/image 23.png" alt="pizza" class="menu-section-img"/>
             </div>
             <div class="menu-price flex flex-column">
               <div class="menu-left flex justify-between">
@@ -341,7 +341,7 @@
         </div>
       </div>
       <div class="contact-img-container">
-        <img class="contact-img" src="./public/image 40.png" alt="map" />
+        <img class="contact-img" src="./assets/images/image 40.png" alt="map" />
       </div>
     </section>
     <!-- Newsletter section -->
@@ -370,7 +370,7 @@
       </div>
       <!-- newsletter right -->
       <div class="img-border">
-        <img src="./public/image 19.png" alt="Restaurant" class="img-border-img"/>
+        <img src="./assets/images/image 19.png" alt="Restaurant" class="img-border-img"/>
       </div>
     </section>
     <footer class="footer">
