--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="./assets/styles/styles.css">
-    <link rel="stylesheet" href="./styles/aboutUs.css">
+    <link rel="stylesheet" href="./assets/styles/aboutUs.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Jomhuria&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Satisfy&display=swap"
     rel="stylesheet"
@@ -32,7 +32,7 @@
         </ul>
         <div class="nav-right flex">
           <button class="nav-button">
-            <img src="./assets/icons/bar-icon.svg" alt="menu">
+            <img src="./assets/icons/Frame 10.svg" alt="menu">
           </button>
           <button class="responsive-nav-button items-center flex-column justify-center">
             <svg
@@ -94,8 +94,10 @@
     </div>
   </header>
         <!-- hero section -->
-        <section class="hero-section">
-            <img class="hero-img" src="./public/about-hero.png" alt="">
+        <section class="hero-section vector-cotainer flex">
+           <div class="hero-left">
+            <img class="hero-img" src="./assets/images/about-hero.png" alt="Restaurant">
+           </div>
             <div class="hero-right">
                 <h2 class="hero-title">We Are A Indian Restaurant make Delicious Recipe For Foodie people.</h2>
                 <p class="hero-description">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document.</p>
@@ -103,23 +105,25 @@
         </section>
 
         <!-- first-restaurent -->
-        <section class="hero-section">
-            <div class="hero-right">
-                <h2 class="hero-title">The Story of Our First Restaurant Branch</h2>
-                <p class="hero-description">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document.</p>
+        <section class="hero-section vector-cotainer flex items-center">
+            <div class="hero-right flex flex-column justify-center items-center">
+                <h2 class="hero-title playfair-display font-bold">The Story of Our First Restaurant Branch</h2>
+                <p class="hero-description text-lg">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document.</p>
             </div>
-            <img class="hero-img" src="./public/image 20.png" alt="">
+     <div>
+      <img class="hero-img" src="./assets/images/image 20.png" alt="interior">
+     </div>
         </section>
         <!-- mission-section -->
-        <section class="mission-section">
+        <section class="mission-section vector-cotainer ">
                 <h1 class="mission-title">Our Vision & Mission</h1>
-                <p class="mission-description"> In publishing and graphic design, Lorem ipsum is a placeholder text <br> commonly used to demonstrate the visual form of a document.</p>
+                <p class="mission-description"> In publishing and graphic design, Lorem ipsum is a placeholder text <span class="block-span">commonly used to demonstrate the visual form of a document.</span></p>
                 <div class="mission-div">
                     <div class="mission-div-left">
                         <div class="mission-div-inner">
                             <div class="mission-div-inner-left">
                                 <div class="img-holder">
-                                    <img class="img-padding" src="./public/icon.png" alt="">
+                                    <img class="img-padding" src="./assets/images/icon.png" alt="burger">
                                 </div>
                             </div>
                             <div>
@@ -130,7 +134,7 @@
                         <div class="mission-div-inner">
                             <div class="mission-div-inner-left">
                                 <div class="img-holder">
-                                    <img class="img-padding" src="./public/icon.png" alt="">
+                                    <img class="img-padding" src="./assets/images/icon.png" alt="burger">
                                 </div>
                             </div>
                             <div>
@@ -141,7 +145,7 @@
                         <div class="mission-div-inner">
                             <div class="mission-div-inner-left">
                                 <div class="img-holder">
-                                    <img class="img-padding" src="./public/icon.png" alt="">
+                                    <img class="img-padding" src="./assets/images/icon.png" alt="burger">
                                 </div>
                             </div>
                             <div>
@@ -151,15 +155,17 @@
                         </div>
                        
                     </div>
-                    <img src="./public/mission.png" alt="">
+                    <div>
+                      <img class="hero-img" src="./assets/images/mission.png" alt="person">
+                    </div>
                 </div>
         </section>
 
         <!-- newsletter section -->
         <section class="newsletter">
-            <div class="newsletter-container">
+            <div class="newsletter-container vector-cotainer flex">
              <div class="img-border">
-                 <img src="./public/image 19.png" alt="">
+                 <img class="newsletter-img" src="./assets/images/image 19.png" alt="person">
              </div>
              <div class="">
                  <div class="yellow-container">
