--- a/index.html
+++ b/index.html
@@ -95,6 +95,26 @@
         </p>
       </div>
     </header>
+    <!-- cover section -->
+     <section class="cover-section relative">
+      <div class="vector-cotainer">
+          <div class="flex items-center cover-text"> 
+            <p class="text-lg playfair-display">A Indian Cuisine Restaurant</p>
+          <img src="./assets/icons/yellow-svg.svg" alt="line">
+          </div>
+        <div class="flex-column flex cover-bottom">
+          <div class="flex flex-column cover-center">
+            <h1 class="cover-title playfair-display">Healthy And Fresh <span class="block-span">Food In One Place</span></h1>
+            <p class="text-lg cover-dsc">In publishing and graphic design, Lorem ipsum is a placeholder <span class="block-span">text commonly used to demonstrate the visual form of a document.</span></p>
+          </div>
+          <div>
+            <button class="hero-button text-lg primary-bg text-center">See Menu</button>
+            <button class="hero-button text-lg primary-bg text-center">Search</button>
+          </div>
+        </div>
+      </div>
+      <img src="./assets/icons/white-mouse.svg" alt="mouse" class="absolute cover-svg">
+     </section>
     <!-- hero section -->
     <section class="hero-section ">
       <div class="hero vector-cotainer">
