--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="flex-column flex cover-bottom">
           <div class="flex flex-column cover-center">
             <h1 class="cover-title playfair-display">Healthy And Fresh <span class="block-span">Food In One Place</span></h1>
-            <p class="text-lg cover-dsc">In publishing and graphic design, Lorem ipsum is a placeholder <span class="block-span">text commonly used to demonstrate the visual form of a document.</span></p>
+            <p class="text-lg cover-dsc">In publishing and graphic design, Lorem ipsum is a placeholder <span class="cover-span">text commonly used to demonstrate the visual form of a document.</span></p>
           </div>
           <div class="flex items-center button-container">
             <button class="hero-button text-lg primary-bg text-center">See Menu</button>
