--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
             <button class="hero-button text-lg primary-bg text-center">See Menu</button>
             <button  class="flex btn search-button text-lg primary-bg text-center"><img class="relative z-100" src="./assets/icons/Search.svg" alt="search"><span class="relative z-100"> Search</span> </button>
           </div>
+          <!-- <div class="button-container">
+            <button class="hover-button">
+              Hover Me
+              <img src="./assets/icons/wheel.svg" alt="wheel" class="wheel">
+            </button>
+          </div> -->
         </div>
         <img src="./assets/icons/white-mouse.svg" alt="mouse" class="absolute cover-svg">
       </div>
